# Financial-Dashboard

./: README.md  justfile  locustfile.py  pyproject.toml
api/: __init__.py  bea_api.py  financial_api.py  service.py
data/: __init__.py  combined_spending_data.csv  data_simulator.py
llm/: __init__.py  llama_setup.py  query_llm.py
llm/prompts/: financial_prompts.txt  general_prompts.txt
project_docs/: mkdocs.yml
project_docs/docs/: api.md  architecture.md  experience.md  features.md  functionalities.md  index.md  installation.md  usage.md
tools/: __init__.py  all.py  crypto_tools.py  emergency_fund_tools.py  financial_dashboard_tools.py  investment_tools.py  main.py  spending_tools.py  stock_tools.py
ui/: __init__.py  app.py
ui/assets/: __init__.py
utils/: __init__.py  config_types.py  configs.py  configs.toml  logging_client.py  logging_server.py  logging_setup.py  models.py  visualization.py
