[project]
name = "financial-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.21",
    "loguru>=0.7.3",
    "ollama>=0.4.7",
    "pydantic>=2.10.6",
    "pyzmq>=26.3.0",
    "ruff>=0.11.2",
]

[tool.ruff]
select = ["ALL"]  # Enables all rules
