[project]
name = "financial-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "langchain>=0.3.21",
    "langchain-ollama>=0.3.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "ollama>=0.4.7",
    "pandas>=2.2.3",
    "plaid-python>=29.1.0",
    "plotly>=6.0.1",
    "pydantic>=2.10.6",
    "pyzmq>=26.3.0",
    "ruff>=0.11.2",
    "streamlit>=1.44.0",
    "uvicorn>=0.34.0",
    "yfinance>=0.2.55",
]

[tool.ruff]
select = ["ALL"]  # Enables all rules
